--- a/multi3/src/main/webapp/index.html
+++ b/multi3/src/main/webapp/index.html
@@ -10,12 +10,12 @@
           <img src="images/jfrog.png">
         </td>
         <td>
-          <h1>Welcome to the TetraNoodle training</h1>
+          <h1>Welcome to the DevOps training</h1>
         </td>
       </tr>
     </table>
 
-    <p>This is the home page for the TetraNoodle CI/CD training </p>
+    <p>This is the home page for the DevOps CI/CD training </p>
   </body>
 </html>
 
