--- a/multi3/src/main/webapp/index.html
+++ b/multi3/src/main/webapp/index.html
@@ -10,7 +10,7 @@
           <img src="images/jfrog.png">
         </td>
         <td>
-          <h1>Welcome to the DevOps training</h1>
+          <h1>Welcome to the DevOps training 1</h1>
         </td>
       </tr>
     </table>
